[gd_scene load_steps=8 format=3 uid="uid://i4a15t7haltt"]

[ext_resource type="Script" uid="uid://dornvpptphp3q" path="res://Scripts/playlist_selection.gd" id="1_5shln"]
[ext_resource type="Shader" uid="uid://ctm3t6psg6w48" path="res://Shaders/milk_pix.gdshader" id="2_o7ag0"]
[ext_resource type="Texture2D" uid="uid://ccvl5eioyv8to" path="res://Art/.png" id="2_p1ibk"]
[ext_resource type="LabelSettings" uid="uid://4erwfha5e2cm" path="res://Text/Settings/Sub.tres" id="4_5shln"]
[ext_resource type="LabelSettings" uid="uid://dnyaml8165uxg" path="res://Text/Settings/Text.tres" id="6_cotgp"]
[ext_resource type="Theme" uid="uid://c734qb2yljwuf" path="res://Art/theme.tres" id="8_nh5qk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fq0cl"]
shader = ExtResource("2_o7ag0")
shader_parameter/bright = Color(0.67451, 0.196078, 0.196078, 1)
shader_parameter/medium = Color(0.321569, 0.14902, 0.243137, 1)
shader_parameter/dark = Color(0.0509804, 0.0509804, 0.0784314, 1)
shader_parameter/bright_thresh = 0.705
shader_parameter/medium_thresh = 0.222
shader_parameter/pixel_size = 1
shader_parameter/alpha = 1.0
shader_parameter/brightness = 1.0

[node name="PlaylistSelection" type="MarginContainer"]
offset_right = 293.0
offset_bottom = 148.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12
script = ExtResource("1_5shln")

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Info"]
material = SubResource("ShaderMaterial_fq0cl")
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_p1ibk")
expand_mode = 5
stretch_mode = 6

[node name="SidebarMargins" type="MarginContainer" parent="Info"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Sidebar" type="VBoxContainer" parent="Info/SidebarMargins"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlaylistTitle" type="Label" parent="Info/SidebarMargins/Sidebar"]
layout_mode = 2
text = "Password"
label_settings = ExtResource("6_cotgp")
autowrap_mode = 1

[node name="NumSongs" type="Label" parent="Info/SidebarMargins/Sidebar"]
layout_mode = 2
text = "aa"
label_settings = ExtResource("4_5shln")
autowrap_mode = 1

[node name="SelectHolder" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -5
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -5

[node name="Select" type="Button" parent="SelectHolder"]
layout_mode = 2
theme = ExtResource("8_nh5qk")
flat = true

[connection signal="pressed" from="SelectHolder/Select" to="." method="_on_select_pressed"]
